src/tests/snapshots/cargo_vet__tests__vet__builtin-complex-no-unaudited.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "missing_criteria": [
        "safe-to-deploy"
      ],
      "name": "third-core",
      "version": "10.0.0"
    },
    {
      "missing_criteria": [
        "safe-to-deploy"
      ],
      "name": "third-core",
      "version": "5.0.0"
    },
    {
      "missing_criteria": [
        "safe-to-deploy"
      ],
      "name": "thirdA",
      "version": "10.0.0"
    },
    {
      "missing_criteria": [
        "safe-to-deploy"
      ],
      "name": "thirdAB",
      "version": "10.0.0"
    }
  ],
  "suggest": {
    "suggest_by_criteria": {
      "safe-to-deploy": [
        {
          "name": "third-core",
          "notable_parents": "firstA",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "diffstat": {
              "count": 25,
              "raw": "+25"
            },
            "from": null,
            "to": "5.0.0"
          }
        },
        {
          "name": "third-core",
          "notable_parents": "firstB, thirdA, thirdAB",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "diffstat": {
              "count": 100,
              "raw": "+100"
            },
            "from": null,
            "to": "10.0.0"
          }
        },
        {
          "name": "thirdA",
          "notable_parents": "firstA",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "diffstat": {
              "count": 100,
              "raw": "+100"
            },
            "from": null,
            "to": "10.0.0"
          }
        },
        {
          "name": "thirdAB",
          "notable_parents": "firstAB",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "diffstat": {
              "count": 100,
              "raw": "+100"
            },
            "from": null,
            "to": "10.0.0"
          }
        }
      ]
    },
    "suggestions": [
      {
        "name": "third-core",
        "notable_parents": "firstA",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "diffstat": {
            "count": 25,
            "raw": "+25"
          },
          "from": null,
          "to": "5.0.0"
        }
      },
      {
        "name": "third-core",
        "notable_parents": "firstB, thirdA, thirdAB",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "diffstat": {
            "count": 100,
            "raw": "+100"
          },
          "from": null,
          "to": "10.0.0"
        }
      },
      {
        "name": "thirdA",
        "notable_parents": "firstA",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "diffstat": {
            "count": 100,
            "raw": "+100"
          },
          "from": null,
          "to": "10.0.0"
        }
      },
      {
        "name": "thirdAB",
        "notable_parents": "firstAB",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "diffstat": {
            "count": 100,
            "raw": "+100"
          },
          "from": null,
          "to": "10.0.0"
        }
      }
    ],
    "total_lines": 325
  }
}
