src/tests/snapshots/cargo_vet__tests__vet__builtin-cycle-unaudited.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Failed!

2 unvetted dependencies:
  dev-cycle:10.0.0 missing ["safe-to-run"]
  normal:10.0.0 missing ["safe-to-deploy"]

recommended audits for safe-to-deploy:
    cargo vet inspect normal 10.0.0  (used by root)  (100 lines)

recommended audits for safe-to-run:
    cargo vet inspect dev-cycle 10.0.0  (used by root)  (100 lines)

estimated audit backlog: 200 lines

Use |cargo vet certify| to record the audits.

