src/tests/snapshots/cargo_vet__tests__vet__builtin-dev-detection-empty-deeper.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "missing_criteria": [
        "safe-to-deploy"
      ],
      "name": "both",
      "version": "10.0.0"
    },
    {
      "missing_criteria": [
        "safe-to-run"
      ],
      "name": "dev-cycle-direct",
      "version": "10.0.0"
    },
    {
      "missing_criteria": [
        "safe-to-run"
      ],
      "name": "dev-cycle-indirect",
      "version": "10.0.0"
    },
    {
      "missing_criteria": [
        "safe-to-deploy"
      ],
      "name": "normal",
      "version": "10.0.0"
    },
    {
      "missing_criteria": [
        "safe-to-run"
      ],
      "name": "simple-dev",
      "version": "10.0.0"
    },
    {
      "missing_criteria": [
        "safe-to-run"
      ],
      "name": "simple-dev-indirect",
      "version": "10.0.0"
    }
  ],
  "suggest": {
    "suggest_by_criteria": {
      "safe-to-deploy": [
        {
          "name": "both",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "diffstat": {
              "count": 100,
              "raw": "+100"
            },
            "from": null,
            "to": "10.0.0"
          }
        },
        {
          "name": "normal",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "diffstat": {
              "count": 100,
              "raw": "+100"
            },
            "from": null,
            "to": "10.0.0"
          }
        }
      ],
      "safe-to-run": [
        {
          "name": "dev-cycle-direct",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-run"
          ],
          "suggested_diff": {
            "diffstat": {
              "count": 100,
              "raw": "+100"
            },
            "from": null,
            "to": "10.0.0"
          }
        },
        {
          "name": "simple-dev",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-run"
          ],
          "suggested_diff": {
            "diffstat": {
              "count": 100,
              "raw": "+100"
            },
            "from": null,
            "to": "10.0.0"
          }
        },
        {
          "name": "dev-cycle-indirect",
          "notable_parents": "dev-cycle-direct",
          "suggested_criteria": [
            "safe-to-run"
          ],
          "suggested_diff": {
            "diffstat": {
              "count": 100,
              "raw": "+100"
            },
            "from": null,
            "to": "10.0.0"
          }
        },
        {
          "name": "simple-dev-indirect",
          "notable_parents": "simple-dev",
          "suggested_criteria": [
            "safe-to-run"
          ],
          "suggested_diff": {
            "diffstat": {
              "count": 100,
              "raw": "+100"
            },
            "from": null,
            "to": "10.0.0"
          }
        }
      ]
    },
    "suggestions": [
      {
        "name": "both",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "diffstat": {
            "count": 100,
            "raw": "+100"
          },
          "from": null,
          "to": "10.0.0"
        }
      },
      {
        "name": "dev-cycle-direct",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-run"
        ],
        "suggested_diff": {
          "diffstat": {
            "count": 100,
            "raw": "+100"
          },
          "from": null,
          "to": "10.0.0"
        }
      },
      {
        "name": "normal",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "diffstat": {
            "count": 100,
            "raw": "+100"
          },
          "from": null,
          "to": "10.0.0"
        }
      },
      {
        "name": "simple-dev",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-run"
        ],
        "suggested_diff": {
          "diffstat": {
            "count": 100,
            "raw": "+100"
          },
          "from": null,
          "to": "10.0.0"
        }
      },
      {
        "name": "dev-cycle-indirect",
        "notable_parents": "dev-cycle-direct",
        "suggested_criteria": [
          "safe-to-run"
        ],
        "suggested_diff": {
          "diffstat": {
            "count": 100,
            "raw": "+100"
          },
          "from": null,
          "to": "10.0.0"
        }
      },
      {
        "name": "simple-dev-indirect",
        "notable_parents": "simple-dev",
        "suggested_criteria": [
          "safe-to-run"
        ],
        "suggested_diff": {
          "diffstat": {
            "count": 100,
            "raw": "+100"
          },
          "from": null,
          "to": "10.0.0"
        }
      }
    ],
    "total_lines": 600
  }
}
