src/tests/snapshots/cargo_vet__tests__vet__builtin-dev-detection-empty-deeper.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Failed!

6 unvetted dependencies:
  both:10.0.0 missing ["safe-to-deploy"]
  dev-cycle-direct:10.0.0 missing ["safe-to-run"]
  normal:10.0.0 missing ["safe-to-deploy"]
  simple-dev:10.0.0 missing ["safe-to-run"]
  dev-cycle-indirect:10.0.0 likely missing ["safe-to-run"]
  simple-dev-indirect:10.0.0 likely missing ["safe-to-run"]

recommended audits for safe-to-deploy:
    cargo vet inspect both 10.0.0    (used by root)  (100 lines)
    cargo vet inspect normal 10.0.0  (used by root)  (100 lines)

recommended audits for safe-to-run:
    cargo vet inspect dev-cycle-direct 10.0.0     (used by root)              (100 lines)
    cargo vet inspect simple-dev 10.0.0           (used by root)              (100 lines)
    cargo vet inspect dev-cycle-indirect 10.0.0   (used by dev-cycle-direct)  (100 lines)
    cargo vet inspect simple-dev-indirect 10.0.0  (used by simple-dev)        (100 lines)

estimated audit backlog: 600 lines

Use |cargo vet certify| to record the audits.

