src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-audit-as-default-root-too-weak.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "missing_criteria": [
        "safe-to-deploy"
      ],
      "name": "root-package",
      "version": "10.0.0"
    }
  ],
  "suggest": {
    "suggest_by_criteria": {
      "safe-to-deploy": [
        {
          "name": "root-package",
          "notable_parents": "",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "diffstat": {
              "count": 100,
              "raw": "+100"
            },
            "from": "0.0.0",
            "to": "10.0.0"
          }
        }
      ]
    },
    "suggestions": [
      {
        "name": "root-package",
        "notable_parents": "",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "diffstat": {
            "count": 100,
            "raw": "+100"
          },
          "from": "0.0.0",
          "to": "10.0.0"
        }
      }
    ],
    "total_lines": 100
  }
}
